--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "My first time entering Advent of Code. I'm pretty rusty in Python at the moment, so I have shameless copied the utility functions from Peter Norvieg's [2020 solutions](https://github.com/norvig/pytudes/blob/main/ipynb/Advent-2020.ipynb) so that my attempts will at least start off in a well structured fashion.\n",
     "\n",
-    "Only entering for to complete, not to get a fast time."
+    "Only entering to complete, not to get a fast time."
    ]
   },
   {
@@ -97,18 +97,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Day 1\n",
-    "Part 1 is to compute the number of times we see an increase between elements. Itertools has a helpful pairwise function that allow comparison between two adjacent elements in a list without making a full copy. Part 2 is to compute a sliding window first.. so I hacked the 'pairwise' function to allow a 3-element sliding window but it's not nicely generalised."
+    "Part 1 is to compute the number of times we see an increase between elements. Itertools has a helpful _pairwise_ function that allows comparison between two adjacent elements in a list without making a full copy. Part 2 is to compute a sliding window first.. so I 'adapted' the _pairwise_ function to allow a 3-element sliding window but it's not nicely generalised to different window lengths."
    ]
   },
   {
