--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "[1832, 1858]"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -240,13 +240,85 @@
        "[1484118, 1463827010]"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "do(2, 1484118, 1463827010)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 3\n",
+    "Full brute force today. For part I I'm sure there must be a better way to unpack the most common element from a _Counter_ and to use the two's complement operator to compute epsilon. In part II, there must be a better way to find the most common element with a default.\n",
+    "\n",
+    "I might revisit  these at a later date."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in3: List(int) = data(3, str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def day3_1(nums):\n",
+    "    nums = [list(x) for x in nums]\n",
+    "    nums = list(map(list, zip(*nums)))\n",
+    "    counters = [Counter(x) for x in nums]\n",
+    "    gamma = \"\".join(str(x.most_common(1)[0][0]) for x in counters)\n",
+    "    epsilon = \"\".join(str(x.most_common()[-1][0]) for x in counters)\n",
+    "    return int(gamma,base=2) * int(epsilon, base=2)\n",
+    "\n",
+    "def get_rating(nums, mode):\n",
+    "    ix = 0\n",
+    "    while len(nums) > 1 and ix < len(nums[0]):\n",
+    "        counter = Counter(x[ix] for x in nums)\n",
+    "        v = counter.most_common(1)[0] if mode==\"most\" else counter.most_common()[-1]\n",
+    "        if v[1]*2 == len(nums):\n",
+    "            v = '1' if mode==\"most\" else '0'\n",
+    "        else:\n",
+    "            v = v[0]\n",
+    "        nums = list(filter(lambda x: x[ix] == v,nums))\n",
+    "        ix += 1\n",
+    "    return nums[0]\n",
+    "\n",
+    "def day3_2(nums):\n",
+    "    oxygen = get_rating(nums,mode=\"most\")\n",
+    "    co2 = get_rating(nums,mode=\"least\")\n",
+    "    return int(oxygen,base=2) * int(co2,base=2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2724524, 2775870]"
+      ]
+     },
+     "execution_count": 99,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "do(3, 2724524, 2775870)"
    ]
   }
  ],
