--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "[1832, 1858]"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[1484118, 1463827010]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -312,13 +312,97 @@
        "[2724524, 2775870]"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "do(3, 2724524, 2775870)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 4\n",
+    "I implemented a BingoBoard class on my first attempt here, but decided this was unnecessary when I revisited it. I think my runtime complexity is _O(NDB^2)_ for N boards, B elements per board and D draws because of the _is_bingo_ function, but the input is not that big."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_bingo_boards(line: str) -> List[int]:\n",
+    "    return list(map(int,re.split(\"\\W+\",line.strip())))\n",
+    "\n",
+    "in4: List[int] = data(4, parse_bingo_boards, sep='\\n\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_bingo(hits, width = 5):\n",
+    "    out = any(all(hits[i:i+width]) for i in range(0,len(hits),width)) # check for complete rows\n",
+    "    if not out:\n",
+    "        out = any(all(hits[i:len(hits):width]) for i in range(width)) # check for complete columns\n",
+    "    return out\n",
+    "\n",
+    "def score_bingo_board(board, draws):\n",
+    "    hits = [False for x in range(len(board))]\n",
+    "    bingo = False\n",
+    "    for i, draw in enumerate(draws):\n",
+    "        if draw in board:\n",
+    "            hits[board.index(draw)] = True\n",
+    "            bingo = is_bingo(hits)\n",
+    "            if bingo: break\n",
+    "    if bingo:\n",
+    "        return (i, draw * sum(x for x, h in zip(board,hits) if not h))\n",
+    "    else:\n",
+    "        return (math.inf, None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def day4_1(boards):\n",
+    "    scores = [score_bingo_board(x, boards[0]) for x in boards[1:]]\n",
+    "    out = min(scores, key = lambda x: x[0])\n",
+    "    return out[1]\n",
+    "\n",
+    "def day4_2(boards):\n",
+    "    scores = [score_bingo_board(x, boards[0]) for x in boards[1:]]\n",
+    "    scores = filter(lambda x: math.isfinite(x[0]), scores)\n",
+    "    out = max(scores, key = lambda x: x[0])\n",
+    "    return out[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[49860, 24628]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "do(4, 49860, 24628)"
    ]
   }
  ],
