--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -404,6 +404,92 @@
    "source": [
     "do(4, 49860, 24628)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 5\n",
+    "Part I is to count the number of overlapping points given a set of horizontal / vertical line segments. Pythons _Counter_ again was quite useful to count the number of overlaps. Part II just required an extension to _parse\\_line\\_segments_ to deal with diagonal lines."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def parse_line_segments(line: str) -> Tuple[int, int, int, int]:  \n",
+    "    a,b,c,d = map(int,re.findall(r'[^->,\\s]+',line))\n",
+    "    assert a == c or b == d or (abs(a-c) == abs(b-d)), \"Lines must be at 0, 45, 90 degrees\"\n",
+    "    return (a,b,c,d)\n",
+    "\n",
+    "in5: Segment = data(5, parse_line_segments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_diagonal(segment):\n",
+    "    a,b,c,d = segment\n",
+    "    return (abs(a-c) == abs(b-d)) and not (a == c or b == d)\n",
+    "\n",
+    "def expand_segment(segment):\n",
+    "    a,b,c,d = segment\n",
+    "    if a == c:\n",
+    "        x1, x2 = min(b,d), max(b, d)\n",
+    "        return [(a,x) for x in range(x1,x2+1)]\n",
+    "    elif b == d:\n",
+    "        x1, x2 = min(a,c), max(a, c)\n",
+    "        return [(x,b) for x in range(x1,x2+1)]\n",
+    "    else:\n",
+    "        signX = 1 if c > a else -1\n",
+    "        signY = 1 if d > b else -1\n",
+    "        return [(a+signX*i,b+signY*i) for i in range(abs(a-c)+1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def day5_1(segments):\n",
+    "    counter = Counter()\n",
+    "    for segment in segments:\n",
+    "        if not is_diagonal(segment):\n",
+    "            counter.update(expand_segment(segment))\n",
+    "    return sum(counter[x]>1 for x in counter)\n",
+    "\n",
+    "def day5_2(segments):\n",
+    "    counter = Counter()\n",
+    "    for segment in segments:\n",
+    "        counter.update(expand_segment(segment))\n",
+    "    return sum(counter[x]>1 for x in counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5167, 17604]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "do(5, 5167, 17604)"
+   ]
   }
  ],
  "metadata": {
