--- a/solutions.ipynb
+++ b/solutions.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "from collections import Counter, defaultdict, namedtuple, deque\n",
     "from itertools   import permutations, combinations, product, chain, tee\n",
     "from functools   import lru_cache\n",
-    "from typing      import Dict, Tuple, Set, List, Iterator, Optional, Union\n",
+    "from typing      import Dict, Tuple, Set, List, Iterator, Optional, Union, NamedTuple\n",
     "\n",
     "import operator\n",
     "import math\n",
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
        "[1832, 1858]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +240,7 @@
        "[1484118, 1463827010]"
       ]
      },
-     "execution_count": 109,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "[2724524, 2775870]"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "[49860, 24628]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +482,7 @@
        "[5167, 17604]"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +554,7 @@
        "[386755, 1732731810807]"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -612,13 +612,105 @@
        "[351901, 101079875]"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "do(7, 351901, 101079875)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Day 8: Seven segment search\n",
+    "Labels for a 7 segment display are scrambled, and the task is to decode 4 numbers given an encoded list of numbers 0-9. Part I is relatively straight forward as you are only asked to decode numbers with a unique number of bars. For Part II I ended up with a reasonably verbose tree of if-statements to complete my 'decoder'. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Display = NamedTuple(\"Display\", [('pattern', List[frozenset]), ('output', List[frozenset])])\n",
+    "\n",
+    "def parse_digits(line: str) -> Display:\n",
+    "    line = line.split(\"|\")\n",
+    "    return Display([frozenset(x) for x in re.findall(r'[^\\s]+',line[0])],[frozenset(x) for x in re.findall(r'[^\\s]+',line[1])])\n",
+    "\n",
+    "in8: List[Display] = data(8, parse_digits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def day8_1(displays: List[Display]) -> int:\n",
+    "    counter = Counter()\n",
+    "    for display in displays:\n",
+    "        counter.update(map(len,display.output))\n",
+    "    return sum(counter[x] for x in [2,4,3,7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def decode_display(display: Display) -> int:\n",
+    "    lens = {2:1,7:8,4:4,3:7}\n",
+    "    encoder = dict()\n",
+    "    for x in display.pattern:\n",
+    "        if len(x) in lens:\n",
+    "            encoder[lens[len(x)]] = x\n",
+    "    for x in display.pattern:\n",
+    "        if len(x) in lens:\n",
+    "            continue\n",
+    "        elif len(x) == 6 and encoder[4].issubset(x):\n",
+    "            encoder[9] = x\n",
+    "        elif len(x) == 6 and not encoder[1].issubset(x):\n",
+    "            encoder[6] = x\n",
+    "        elif len(x) == 6:\n",
+    "            encoder[0] = x\n",
+    "        elif len(x) == 5 and encoder[7].issubset(x):\n",
+    "            encoder[3] = x\n",
+    "        elif len(x) == 5 and len(x.intersection(encoder[4])) == 3:\n",
+    "            encoder[5] = x\n",
+    "        else:\n",
+    "            encoder[2] = x\n",
+    "    decoder = {v:k for k,v in encoder.items()}\n",
+    "    assert all(x in decoder for x in display.pattern)\n",
+    "    return int(\"\".join([str(decoder[x]) for x in display.output]))\n",
+    "\n",
+    "\n",
+    "def day8_2(displays: List[Display]) -> int:\n",
+    "    return sum(map(decode_display, displays))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[387, 986034]"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "do(8, 387, 986034)"
    ]
   }
  ],
